[project]
name = "nn-verification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "maraboupy>=2.0.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "onnxruntime>=1.21.1",
    "onnxscript>=0.2.5",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]
